Minor header menu overflow fix; prevent scrolling of header at some sizes in chrome, safari

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -3,7 +3,7 @@
 	
 	#header .search-form #s { width: 71% !important; }
 	
-	#header-menu li.nexttolast { margin-left: 297px; }
+	#header-menu li.nexttolast { margin-left: 290px; }
 	
 	.post-type-search-form input { width: 235px; }
 }
