--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 #home .search label{display: block; color: #C14D00; font-size: 16px; font-weight: normal; font-family: "Georgia", "serif";}
 #home .bottom{margin-top: 16px; border-top: none;}
 
-#header{margin-bottom: .5em;margin-top:40px; overflow: auto; padding-bottom: 0;}
+#header{margin-bottom: .5em;margin-top:40px; overflow: hidden; padding-bottom: 0;}
 #header h1 a { font-weight: 200; font-size: 38px; }
 #header #header-search { margin-top: 4px; }
 #header #header-search #s { display: inline; width:65%; }
@@ -86,7 +86,7 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 .menu.horizontal li:after { content: ""; }
 .menu a { font-weight: 400; color: #333; }
 
-#header-menu li.nexttolast { margin-left: 67px; }
+#header-menu li.nexttolast { margin-left: 60px; }
 #header-menu li.nexttolast:after { content: "|"; }
 #header-menu li.nexttolast a, #header-menu li.last a { 
 	font-size: 11px; text-transform: uppercase; font-weight: bold;
